{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 132,
  "lineage": "f0f2e2ad-afa2-64f3-0511-85a6ce40b8ef",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-main-355822/zones/us-central1-c/disks/zabbix-data"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-97-16919-103-4",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-main-355822/zones/us-central1-c/disks/zabbix-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-main-355822/zones/us-central1-c/instances/zabbix-host",
            "instance_id": "6956484929637505975",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "xYZ3OWhAXLs=",
            "metadata_startup_script": "# Get Docker Compose yml file \nmkdir /zabbix\nwget https://raw.githubusercontent.com/zabbix/zabbix-docker/6.2/docker-compose_v3_alpine_mysql_latest.yaml\n",
            "name": "zabbix-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.71.73.65",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-main-355822/global/networks/zabbix-vpc",
                "network_ip": "10.25.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-main-355822/regions/us-central1/subnetworks/zabbix-vpc-public-subnet",
                "subnetwork_project": "project-main-355822"
              }
            ],
            "project": "project-main-355822",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-main-355822/zones/us-central1-c/instances/zabbix-host",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "zabbix"
            ],
            "tags_fingerprint": "_1_Pn5AhpDk=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_disk.pd",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-10T16:48:28.035-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-main-355822/global/firewalls/zabbix-vpc-http-fw",
            "log_config": [],
            "name": "zabbix-vpc-http-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/project-main-355822/global/networks/zabbix-vpc",
            "priority": 1000,
            "project": "project-main-355822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-main-355822/global/firewalls/zabbix-vpc-http-fw",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "zabbix"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-10T16:48:28.013-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-main-355822/global/firewalls/zabbix-vpc-ssh-fw",
            "log_config": [],
            "name": "zabbix-vpc-ssh-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/project-main-355822/global/networks/zabbix-vpc",
            "priority": 1000,
            "project": "project-main-355822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-main-355822/global/firewalls/zabbix-vpc-ssh-fw",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-main-355822/global/networks/zabbix-vpc",
            "mtu": 0,
            "name": "zabbix-vpc",
            "project": "project-main-355822",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-main-355822/global/networks/zabbix-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-10T16:48:28.061-07:00",
            "gateway_address": "10.25.1.1",
            "id": "projects/project-main-355822/regions/us-central1/subnetworks/zabbix-vpc-private-subnet",
            "ip_cidr_range": "10.25.1.0/24",
            "name": "zabbix-vpc-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-main-355822/global/networks/zabbix-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-main-355822",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-main-355822/regions/us-central1/subnetworks/zabbix-vpc-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-10T16:48:28.973-07:00",
            "gateway_address": "10.25.2.1",
            "id": "projects/project-main-355822/regions/us-central1/subnetworks/zabbix-vpc-public-subnet",
            "ip_cidr_range": "10.25.2.0/24",
            "name": "zabbix-vpc-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-main-355822/global/networks/zabbix-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-main-355822",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-main-355822/regions/us-central1/subnetworks/zabbix-vpc-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}